# xerj

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  wrangler.toml
engine/: CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  xerj.default.toml
engine/.cargo/: config.toml
engine/crates/xerj-ai/: Cargo.toml
engine/crates/xerj-ai/examples/: onnx_experimental.rs
engine/crates/xerj-ai/src/: chunker.rs  embed.rs  embedder.rs  lib.rs  local.rs  memory.rs  neural.rs  onnx.rs
engine/crates/xerj-api/: Cargo.toml
engine/crates/xerj-api/src/: auth.rs  binary_protocol.rs  error.rs  es_compat.rs  extract.rs  lib.rs  main.rs  memory_api.rs  native.rs  responses.rs  router.rs  state.rs  stub.rs
engine/crates/xerj-autoindex/: Cargo.toml
engine/crates/xerj-autoindex/src/: catalog.rs  cli.rs  coerce.rs  correlate.rs  dataset.rs  esclient.rs  ids.rs  lib.rs  sniff.rs  state.rs  walk.rs
engine/crates/xerj-autoindex/src/extract/: csv_x.rs  docx.rs  html.rs  json.rs  jsonl.rs  logs.rs  mod.rs  pdf.rs  sqldump.rs  sqlite_x.rs  txt.rs  (+2 more)
engine/crates/xerj-cluster/: Cargo.toml
engine/crates/xerj-cluster/src/: coordinator.rs  lib.rs  metadata.rs  node.rs  raft.rs  raft_log.rs  regions.rs  replication.rs  router.rs  runner.rs  search.rs  transport.rs
engine/crates/xerj-cluster/tests/: persistent_raft_test.rs  region_tests.rs  replication_tests.rs  transport_tests.rs
engine/crates/xerj-common/: Cargo.toml
engine/crates/xerj-common/src/: config.rs  error.rs  fsio.rs  lib.rs  metrics.rs  schema.rs  types.rs
engine/crates/xerj-compress/: Cargo.toml
engine/crates/xerj-compress/src/: block.rs  codec.rs  dictionary.rs  field_codec.rs  lib.rs
engine/crates/xerj-console-api/: Cargo.toml  build.rs
engine/crates/xerj-console-api/src/: bootstrap.rs  cluster.rs  dashboards.rs  data_sources.rs  error.rs  indices.rs  lib.rs  prefs.rs  response.rs  router.rs  seed.rs  spa.rs  state.rs  time.rs  views.rs
engine/crates/xerj-console-api/tests/: api_tokens_flow.rs  dashboards_seed_and_schema.rs  phase1_boot_and_cluster_info.rs  phase2_auth_flow.rs  phase3_user_state.rs  router_precedence.rs  spa_assets.rs
engine/crates/xerj-engine/: Cargo.toml
engine/crates/xerj-engine/benches/: search_bench.rs
engine/crates/xerj-engine/examples/: alloc_count.rs
engine/crates/xerj-engine/src/: aggs.rs  audit.rs  bulk.rs  engine.rs  fast_aggs.rs  governor.rs  index.rs  lib.rs  memtable.rs  painless.rs  rbac.rs  slow_query.rs  sql.rs  turbo_ingest.rs
engine/crates/xerj-engine/tests/: battle_test.rs  chaos_tests.rs  es_compat_tests.rs  integration.rs  multi_match_scoring.rs  node_lock.rs  perf_benchmark.rs  product_experience.rs  rc4_w2_storage_hardening.rs  search_context_ttl.rs  shard_router_write_path.rs
engine/crates/xerj-fts/: Cargo.toml
engine/crates/xerj-fts/src/: analyzer.rs  bm25.rs  index.rs  lib.rs  postings.rs  search.rs
engine/crates/xerj-logs/: Cargo.toml
engine/crates/xerj-logs/src/: columnar.rs  ingest.rs  lib.rs  query.rs  retention.rs
engine/crates/xerj-mcp/: Cargo.toml
engine/crates/xerj-mcp/src/: main.rs
engine/crates/xerj-query/: Cargo.toml
engine/crates/xerj-query/src/: ast.rs  dates.rs  error.rs  executor.rs  lib.rs  parser.rs  planner.rs  rewriter.rs  sort.rs
engine/crates/xerj-server/: Cargo.toml  build.rs
engine/crates/xerj-server/src/: grpc.rs  main.rs
engine/crates/xerj-storage/: Cargo.toml
engine/crates/xerj-storage/src/: backend.rs  cache.rs  doc_values.rs  index_store.rs  lib.rs  merge.rs  segment.rs  stored_codec.rs  version_map.rs  wal.rs
engine/crates/xerj-vector/: Cargo.toml
engine/crates/xerj-vector/examples/: recall_probe.rs
engine/crates/xerj-vector/src/: distance.rs  hnsw.rs  lib.rs  quantizer.rs  search.rs
engine/crates/xerj-wasm/: Cargo.toml
engine/crates/xerj-wasm/examples/: example_custom_plugin.rs  example_pipeline.json
engine/crates/xerj-wasm/src/: builtins.rs  lib.rs  pipeline.rs
engine/crates/xerj-wasm/tests/: integration.rs
engine/docs/xerj-console-backend/: API_DESIGN_v1.md
engine/proto/: xerj.proto
engine/reports/: 2026-04-15T21-30-36_cargo_test_results.md  2026-04-15T21-38-59_sla_battle_summary.md  2026-04-15T21-43-26_es_api_compat.md  2026-04-15T21-43-49_es_api_compat.md  2026-04-15T23-26-13_es_api_compat.md  2026-04-15T23-28-36_es_api_compat.md  2026-04-15T23-29-37_es_api_compat.md  2026-04-15T23-33-02_es_api_compat.md  2026-04-15T23-36-17_es_api_compat.md  2026-04-15T23-37-09_h2h_summary.md  2026-04-16T00-09-49_h2h_final.md  2026-04-16T01-53-47_es_api_compat.md  2026-04-16T02-10-43_es_api_compat.md  2026-04-16T03-08-13_es_api_compat.md  2026-04-16T08-10-37_es_api_compat.md  2026-04-16T09-25-35_battle_full_simd.md  2026-04-16T10-03-53_battle_simd.md  2026-04-16T17-24-40_battle_drain_fix.md  2026-04-16T17-25-04_battle_drain_fix.md  2026-04-16T19-01-46_battle_serde_drain.md  2026-04-17T22-44-24_M2_sharded_wal.md  2026-04-17T23-00-16_M5_M7_raw_bytes.md  2026-04-17T23-20-00_multicore_scaling_final.md  2026-04-17T23-45-59_final_battle.md  2026-04-18T00-30-00_profiling_path_to_10M.md  2026-04-18T08-50-00_sync_engine_refactor.md  2026-04-18T14-00-00_micro_ops_and_race_fix.md  2026-04-24T00-00-00_v1_readiness_audit.md  2026-04-24T23-30-00_v1_readiness_post_merge.md  2026-04-24T23-58-00_pov_test_battery.md  2026-04-25T00-00-00_pov_battery_final.md  2026-04-25T03-30-00_xerj_vs_elasticsearch_bench.md  2026-04-25T13-40-00_xerj_vs_elasticsearch_disk_parity.md  2026-04-25T21-50-00_ingest_perf_regression_zstd19.md  2026-04-25T22-00-00_autotuner_design_notes.md  2026-04-25T22-50-00_xerj_vs_elasticsearch_rerun.md  CODE_REVIEW_LINUS_2026-04-25.md  FEATURE_FAIRNESS_REVIEW_v0.6.0_2026-04-25.md  PATH_TO_100_PCT_v0.6.0_to_v1.0.md  PLAYGROUND_DEMO_2026-04-25.md  (+6 more)
engine/tests/: battle_real.sh  battle_sla.sh  es_api_compat_test.py
engine/tests/datasets/: access_logs.ndjson  articles.ndjson  generate_datasets.sh  products.ndjson
engine/tests/es-compat-yaml/: Cargo.toml
engine/tests/es-compat-yaml/src/: main.rs
(+593 files in other folders)
