[package]
name = "xerj-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI-native features for xerj — embedding proxy, chunking, and agent memory"

[dependencies]
xerj-common = { path = "../xerj-common" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
