[package]
name = "xerj-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI-native features for xerj — embedding proxy, chunking, and agent memory"

[dependencies]
xerj-common = { path = "../xerj-common" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Built-in neural embedder (candle + MiniLM), download-on-first-run.
# Feature-gated so the default build stays dependency-light and the
# lexical embedder remains the zero-dep fallback. When `neural` is off,
# none of this compiles.
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["fancy-regex"] }
# `ureq` (sync, blocking) pulls rustls by default — pure-Rust TLS, no OpenSSL,
# so the neural feature cross-compiles cleanly to musl/aarch64/windows.
hf-hub = { version = "0.4", optional = true, default-features = false, features = ["ureq"] }
# EXPERIMENTAL GNU/Linux ONNX backend. This is deliberately separate from
# `neural`: the production Candle backend and musl builds remain unchanged.
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = [
    "std", "ndarray", "tracing", "download-binaries", "tls-rustls",
    "copy-dylibs", "api-24",
] }
sha2 = { version = "0.10", optional = true }

[features]
default = []
# Bundles the neural BERT embedder. Adds ~candle + tokenizers to the build.
neural = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
# Experimental local ONNX backend; xerj-server exposes it only when the
# feature is propagated and explicitly selected at runtime.
onnx-experimental = ["dep:ort", "dep:tokenizers", "dep:sha2"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "onnx_experimental"
required-features = ["onnx-experimental"]
