[package]
name = "xerj-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
xerj-common  = { path = "../xerj-common" }
xerj-engine  = { path = "../xerj-engine" }
xerj-query   = { path = "../xerj-query" }
xerj-wasm    = { path = "../xerj-wasm" }
# Note: this crate intentionally does NOT depend on xerj-console-api.
# Xerj Console is a peer product mounted at the server level (`xerj-server`)
# via Router::merge. Engine API and Xerj Console API are decoupled — the
# engine doesn't know Xerj Console exists, and Xerj Console could be removed from
# the binary build without changing a line of xerj-api code.

tokio        = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
bytes        = { workspace = true }
prometheus   = { workspace = true }
dashmap              = { workspace = true }
tracing-subscriber   = { workspace = true }

async-trait  = "0.1"

[dev-dependencies]
tempfile     = { workspace = true }
tower        = { workspace = true, features = ["util"] }
http-body-util = "0.1"
