[package]
name = "xerj-autoindex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "xerj autoindex — point it at any folder and make the contents AI-searchable with zero configuration"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
regex = "1"
walkdir = "2"
encoding_rs = "0.8"
xxhash-rust.workspace = true
memchr.workspace = true
rayon.workspace = true
# ES-compat HTTP client. Blocking mode: all of autoindex is synchronous
# (std threads), invoked from the server binary via spawn_blocking.
reqwest = { workspace = true, features = ["blocking"] }

# Format-family extractors (new deps, isolated to this crate):
flate2 = "1"                                     # gzip streaming (rust backend)
csv = "1"                                        # streaming CSV with sniffed dialect
quick-xml = "0.36"                               # XML pull parser + DOCX internals
zip = { version = "2", default-features = false, features = ["deflate"] }  # DOCX container
serde_yaml = "0.9"                               # YAML multi-doc
# The one C dependency (bundled SQLite), isolated to this crate.
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile.workspace = true
