[package]
name = "xerj-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared types, configuration, and error handling for the xerj search engine"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
bytes.workspace = true
byteorder.workspace = true
prometheus.workspace = true
