[package]
name = "xerj-fts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Full-text search engine for xerj — FST term dictionary, PFOR posting lists, BM25 scoring"

[dependencies]
# Workspace crates
xerj-common = { path = "../xerj-common" }

# Workspace deps
fst.workspace = true
bitpacking.workspace = true
roaring.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bytes.workspace = true
byteorder.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rayon.workspace = true
memmap2 = { workspace = true }
lz4_flex = { workspace = true }
zstd = { workspace = true }

# Direct deps (not in workspace)
unicode-segmentation = "1"
rust-stemmers = "1.2"
regex = "1"

[dev-dependencies]
tempfile.workspace = true
