[package]
name = "xerj-logs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Columnar log engine for xerj — ingest, store, and query structured logs"

[dependencies]
xerj-common = { path = "../xerj-common" }
xerj-compress = { path = "../xerj-compress" }
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
byteorder.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile.workspace = true
