[package]
name = "xerj-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Main server binary for the xerj search engine"

[[bin]]
name = "xerj"
path = "src/main.rs"

[dependencies]
xerj-common  = { path = "../xerj-common" }
xerj-engine  = { path = "../xerj-engine" }
xerj-query   = { path = "../xerj-query" }
xerj-api     = { path = "../xerj-api" }
xerj-storage = { path = "../xerj-storage" }
xerj-fts     = { path = "../xerj-fts" }
xerj-vector  = { path = "../xerj-vector" }
xerj-logs    = { path = "../xerj-logs" }
xerj-ai      = { path = "../xerj-ai" }
xerj-compress = { path = "../xerj-compress" }
xerj-cluster  = { path = "../xerj-cluster" }
xerj-console-api     = { path = "../xerj-console-api" }
xerj-autoindex = { path = "../xerj-autoindex" }

tokio.workspace = true
axum.workspace = true
# In-process TLS termination for the REST + ES-compat listeners.
# `tls-rustls-no-provider` deliberately avoids axum-server's default
# `tls-rustls` feature, which would force `rustls/aws-lc-rs` into the
# build; we install the `ring` provider ourselves (ring is already in
# the dependency tree via reqwest), keeping the crypto backend uniform
# and cross-compile friendly.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rcgen.workspace = true
rand.workspace = true
anyhow.workspace = true
chrono.workspace = true
memmap2 = { workspace = true }
memchr = { workspace = true }
rayon = { workspace = true }

# gRPC server: the real XerjSearch service on :8081 (proto: ../../proto/xerj.proto).
tonic.workspace = true
prost.workspace = true

# Use jemalloc as the global allocator.  The default glibc malloc causes
# pathological memory retention under heavy churn (ingest → flush → ingest)
# because it never returns freed heap pages to the OS.  jemalloc is
# fragmentation-friendly and actively madvise()'s freed ranges, which brings
# RSS back down after each flush — critical under the 4 GB cgroup cap.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[build-dependencies]
# Compile ../../proto/xerj.proto → Rust at build time. `protox` parses the
# .proto in pure Rust (no host protoc); `tonic-build` turns the resulting
# FileDescriptorSet into the client + server stubs via `compile_fds`.
tonic-build = { workspace = true }
protox = { workspace = true }

[dev-dependencies]
# HTTPS round-trip test against the in-process rustls listener.
reqwest = { workspace = true }
tempfile = { workspace = true }
