[package]
name = "xerj-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Vector search engine for xerj — HNSW index, quantization, and KNN queries"

[dependencies]
xerj-common = { path = "../xerj-common" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
byteorder.workspace = true
crc32fast.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
