[package]
name = "xerj-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WASM pipeline crate for xerj — built-in transform plugins with optional WASM backend"

[dependencies]
xerj-common = { path = "../xerj-common" }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
bytes        = { workspace = true }
tokio        = { workspace = true }
chrono       = { workspace = true }
regex        = "1"

[dev-dependencies]
tokio    = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
