[package]
name = "es-yaml-runner"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "es-yaml-runner"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
glob = "0.3"
colored = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
